[package]
name = "rust-tuya-cli"
version = "0.1.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"
description = "This crate is a rust port of codetheweb's tuyapi-cli"
homepage = "https://github.com/EmilSodergren/rust-tuya-cli"
repository = "https://github.com/EmilSodergren/rust-tuya-cli"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
openssl = { version = "0.10", features = ["vendored"] }
rust-tuyapi = "0.4"
